--- a/manifest.json
+++ b/manifest.json
@@ -1,12 +1,12 @@
 {
-  "display_name": "HY Audio Player",
-  "version": "1.0.0",
+  "display_name": "音乐播放器",
+  "version": "1.0.1",
   "author": "17-cm",
   "homePage": "https://github.com/17-cm/HY-audio-player",
-  "js": "extension.js",
+  "js": "index.js",
   "css": "style.css",
   "auto_update": true,
   "requires": [],
   "optional": [],
-  "loading_order": 999
+  "loading_order": 1
 }
